<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TabsAndTrack</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_add_account">AddAccountActivity</string>
    <string name="title_activity_edit_type">AddAccountActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_group_expense">GroupExpenseActivity</string>
    <string name="title_activity_group_expense_split">GroupExpenseSplitActivity</string>
    <string name="title_activity_edit_contact">EditContactActivity</string>

    <!-- global -->
    <string name="nextButton">Next</string>
    <string name="backButton">Back</string>
    <string name="cancelButton">Cancel</string>
    <string name="doneButton">Done</string>
    <string name="resetButton">Reset</string>
    <string name="logout">Logout</string>

    <!-- activity_login -->
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="rememberMeText">Remember Me</string>
    <string name="signInButton">Sign In</string>
    <string name="signUpButton">Sign Up</string>

    <!-- activity_sign_up -->
    <string name="title_activity_user_details">UserDetailsActivity</string>
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>
    <string name="emailIdHint">Email Address</string>
    <string name="retypePasswordHint">Re-type Password</string>

    <!-- activity_add_account -->
    <string name="accountNameHint">Account Name</string>
    <string name="accountLimitHint">Account Limit</string>
    <string name="addMoreAccountsHint">Add More Accounts</string>
    <string name="title_activity_user_details_db_operations">UserDetailsDbOperations</string>

    <!-- activity_home -->
    <string name="personalExpenseButton">Personal Expenses</string>
    <string name="groupExpenseButton">Group Expenses</string>

    <!-- activity_personal_expense -->
    <string name="title_activity_personal_expense">PersonalExpenseActivity</string>
    <string name="transactionHint">Transaction Name</string>
    <string name="amountHint">Amount</string>
    <string name="addTypeHint">Add Type</string>
    <string name="dateLabelHint">Select Date</string>

    <!-- activity_add_type -->
    <string name="title_activity_add_type">AddTypeActivity</string>
    <string name="typeNameHint">Type Name</string>
    <string name="addMoreTypesHint">Add More</string>
    <string name="deleteButtonHint">Delete</string>

    <!-- activity_edit_contact -->
    <string name="contactNameHint">Contact Name</string>
    <string name="addMoreContactsHint">Add More</string>

    <!-- activity_group_expense -->
    <string name="splitEqually">Equally</string>
    <string name="splitUnequally">Unequally</string>
    <string name="splitAmountHint">Split amount:</string>

    <!-- activity_group_expense_split -->
    <string name="groupContactHint">Quick add a contact</string>
    <string name="addContactHint">Add contact</string>
    <string name="title_activity_display_personal_transactions">DisplayPersonalTransactions</string>

</resources>