<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" 
    android:orientation="vertical"
    android:scrollbars="vertical">

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" 
        android:hint="@string/usernameHint"
        android:layout_margin="10dp">

    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" 
        android:hint="@string/passwordHint"
        android:layout_margin="10dp"/>

    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:hint="@string/rememberMeText"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/signIn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content" 
        android:hint="@string/signInButton"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:onClick="onSignInClick"/>

    <Button
        android:id="@+id/signUp"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content" 
        android:hint="@string/signUpButton"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:onClick="onSignUp"/>
    
</LinearLayout>
