<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAccountActivity" 
    android:orientation="vertical" >

    <EditText
        android:id="@+id/accountName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" 
        android:hint="@string/accountNameHint"
        android:layout_margin="10dp">

    </EditText>

    <EditText
        android:id="@+id/accountLimit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" 
        android:hint="@string/accountLimitHint"
        android:layout_margin="10dp"/>

     <CheckBox
        android:id="@+id/addMoreAccounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:hint="@string/addMoreAccountsHint"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"/>
    
     
    <Button
        android:id="@+id/cancelAddAccountBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content" 
        android:hint="@string/cancelButton"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:onClick="onCancelClick"/>

    <Button
        android:id="@+id/doneAddAccountBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content" 
        android:hint="@string/doneButton"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:onClick="onDoneClick"/>
    
</LinearLayout>
