<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".GroupExpenseActivity" >

        <EditText
            android:id="@+id/groupTransactionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/transactionHint"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/groupTransactionType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="10dp"
                android:layout_weight="0.70"
                android:ems="10" />

            <Button
                android:id="@+id/groupAddType"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="10dp"
                android:layout_weight="0.30"
                android:ems="10"
                android:hint="@string/addTypeHint"
                android:onClick="onGroupAddTypeClick" />
        </LinearLayout>

        <TextView
            android:id="@+id/groupTransactionDayLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textSize="18sp"
            android:hint="@string/dateLabelHint" >
        </TextView>

        <DatePicker
            android:id="@+id/groupDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:calendarViewShown="false"
            android:ems="10" />

        <EditText
            android:id="@+id/groupAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/amountHint"
            android:inputType="numberDecimal" />
        
        <TextView 
            android:id="@+id/groupSplitAmountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:hint="@string/splitAmountHint"/>

            <RadioGroup
                android:id="@+id/split_transaction_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_margin="20dp"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/split_unequally_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/splitEqually" />

                <RadioButton
                    android:id="@+id/split_equally_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/splitUnequally" />
            </RadioGroup>
    
        <Spinner
            android:id="@+id/groupAccountType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:ems="10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/groupResetButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="left|bottom"
                android:layout_margin="10dp"
                android:hint="@string/resetButton"
                android:onClick="onResetClick" />

            <Button
                android:id="@+id/groupExpNextButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="@string/nextButton"
                android:onClick="onNextClick" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>