<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".PersonalExpenseActivity" >

        <EditText
            android:id="@+id/transactionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/transactionHint"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/transactionType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight = "0.70"
                android:layout_margin="10dp"
                android:ems="10"/>

            <Button
                android:id="@+id/addType"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight = "0.30"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/addTypeHint"
                android:onClick="onAddTypeClick" />
        </LinearLayout>
        <TextView
            android:id="@+id/transactionDayLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textSize="18sp"
            android:hint="@string/dateLabelHint" >
        </TextView>

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:calendarViewShown="false"
            android:ems="10" />
        <EditText
            android:id="@+id/amount"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/amountHint"/>

        <Spinner
            android:id="@+id/accountType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:ems="10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/resetButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="left|bottom"
                android:layout_margin="10dp"
                android:hint="@string/resetButton"
                android:onClick="onResetClick" />

            <Button
                android:id="@+id/doneButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="@string/doneButton"
                android:onClick="onDoneClick" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>